reduce ref coords letter spacing. fixes #65.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -404,3 +404,13 @@ tbody tr.positivePositions td.seq-cell {
     cursor: default;
     opacity: 0.6;
 }
+
+/*
+very slightly reduce the spacing, so the coordinates line up with
+the alignment columns.
+
+FIXME: this should not be necessary.
+*/
+#sequence-viewer .ref-coords {
+letter-spacing: -.001em;
+}
